--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install Swift 6
+        uses: swift-actions/setup-swift@v1
+        with:
+          swift-version: "6.0"
+
       - name: Run tests
         run: swift test
 
